# libmotslideshow

./: Makefile  Makefile.am  README.md  configure.ac
src/: Makefile  Makefile.am  slideshow.cpp  slideshow.h  slideshow_encoder.cpp
test/: Makefile.am  encode_image.cpp
tests/: Makefile  encode_image  encode_image.cpp
